--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -1,33 +1,44 @@
-## What does this PR do?
+name: Linters
 
-This PR is raised to implement the following features: 👍 :
+on: pull_request
 
-- [x] Create app.rb
-- [x] Create main.rb
+env:
+  FORCE_COLOR: 1
 
-## Description of the task to be completed ↓↓ 
-
-- Build interactive console app.
-
-## How to run 
-
-Clone the repository
-```
-git clone https://github.com/SamTush/school-library.git
-```
-Navigate to the folder
-```
-cd school-library
-```
-Checkout the branch
-```
-git checkout feature/add-ui
-```
-
-## How to start the app
-
-```
-  ruby main.rb
-```
-
-#### Thanks for reviewing my PR 😊
+jobs:
+  rubocop:
+    name: Rubocop
+    runs-on: ubuntu-22.04
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-ruby@v1
+        with:
+          ruby-version: 3.1.x
+      - name: Setup Rubocop
+        run: |
+          gem install --no-document rubocop -v '>= 1.0, < 2.0' # https://docs.rubocop.org/en/stable/installation/
+          [ -f .rubocop.yml ] || wget https://raw.githubusercontent.com/microverseinc/linters-config/master/ror/.rubocop.yml
+      - name: Rubocop Report
+        run: rubocop --color
+  stylelint:
+    name: Stylelint
+    runs-on: ubuntu-22.04
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: "18.x"
+      - name: Setup Stylelint
+        run: |
+          npm install --save-dev stylelint@13.x stylelint-scss@3.x stylelint-config-standard@21.x stylelint-csstree-validator@1.x
+          [ -f .stylelintrc.json ] || wget https://raw.githubusercontent.com/microverseinc/linters-config/master/ror/.stylelintrc.json
+      - name: Stylelint Report
+        run: npx stylelint "**/*.{css,scss}"
+  nodechecker:
+    name: node_modules checker
+    runs-on: ubuntu-22.04
+    steps:
+      - uses: actions/checkout@v3
+      - name: Check node_modules existence
+        run: |
+          if [ -d "node_modules/" ]; then echo -e "\e[1;31mThe node_modules/ folder was pushed to the repo. Please remove it from the GitHub repository and try again."; echo -e "\e[1;32mYou can set up a .gitignore file with this folder included on it to prevent this from happening in the future." && exit 1; fi
